Update comandos java/javac