@@ -26,6 +26,7 @@ Ter em atencao, que para ser possivel o uso da aplicacao, e necessario iniciar o
 Executar ficheiros .class:
 java -cp bin -Djava.security.manager -Djava.security.policy==server.policy Server.SeiTchizServer 45678 kfalsa 
 java -cp bin -Djava.security.manager -Djava.security.policy==server.policy Server.SeiTchizServer 45678 keystore keystore-password
+java -cp bin -Djava.security.manager -Djava.security.policy==server.policy Server.SeiTchizServer 45678 servidor servidor
 
 Executar ficheiro .jar:
 java -cp bin -Djava.security.manager -Djava.security.policy==server.policy -jar SeiTchizServer.jar 45678
@@ -35,6 +36,7 @@ java -cp bin -Djava.security.manager -Djava.security.policy==server.policy -jar 
 Executar ficheiros .class:
 java -cp bin -Djava.security.manager -Djava.security.policy==client.policy Client.SeiTchiz 127.0.0.1:45678 userName password123
 java -cp bin -Djava.security.manager -Djava.security.policy==client.policy Client.SeiTchiz 127.0.0.1:45678 truststore keystore keystore-password clientid
+java -cp bin -Djava.security.manager -Djava.security.policy==client.policy Client.SeiTchiz 127.0.0.1:45678 xxxxx clientid clientid clientid
 
 Executar ficheiro .jar:
 java -cp bin -Djava.security.manager -Djava.security.policy==client.policy -jar SeiTchiz.jar 127.0.0.1:45678 userName password123
